--- a/css/index.css
+++ b/css/index.css
@@ -26,23 +26,57 @@ body {color:#666;
  1.둘다 float정렬 : 부모한테 .cf나 overhidden
  2.둘 중에 높이가 낮은 자식을 position:absolute정렬 : 부모한테 position:relative */
 #header > .row {position: relative;}
-#header h1 { /* float:left: ; */ padding:20px 25px;}
+#header h1 { /* float:left: ; */ padding:20px 0px;}
 #header #nav {/* float:right: ; */ z-index:999999;
     position: absolute; top:50%; right: 0;
     transform: translateY(-50%);
     font-size:18px; color:#1e1e1e;}
-#header #nav .depth1 > li {display:inline-block; padding:30px;
-    position:relative; font-weight: bold;}
-#header #nav .depth1 > li:hover {color:#00529b;}
+#header #nav .depth1 > li {float:left; position:relative; font-weight: bold;}
+#header #nav .depth1 > li > a { padding:20px 30px; display:inline-block; }
+#header #nav .depth1 > li:hover > a {color:#00529b;}
 #header #nav .depth2 {background:#555; color:#fff; font-size:14px;
     position:absolute; top:100%; left:0%; text-align:center;
-    display:none; z-index:999999; width:100%;}
-#header #nav .depth1 > li:hover .depth2 {display:block;}
+    z-index:999999; width:100%;
+    display:none; 
+    /* opacity: 0; */
+    transition:all 0.3s; /* display 속성은 적용 안됨 */
+}
+#header #nav .depth1 > li:hover .depth2 {
+    display:block;
+    /* opacity: 1; */
+}
 #header #nav .depth2 > li > a {display:block; padding:15px 0; border-bottom:1px solid #666}
 /* a 태그에 padding값 줄때는 display:inline-block도 항상 같이 */
+#header .depth2 > li:last-child > a {border-bottom: none;}
 #header #nav .depth2 > li:hover > a {background:#00529b; color:#dfe9fe;}
 
 /* section */
+.article1 .slide-group {position:relative;}
+.article1 .slide-group .slick-arrow {
+    position:absolute;
+    top:50%; transform:translateY(-50%);
+    background:none; border:none;
+    font-size:50px; color:rgba(255,255,255,0.7);
+}
+.article1 .slide-group .prev {left:50px; z-index:999;}
+.article1 .slide-group .next {right:50px;}
+.article1 .slide-group .slick-dots {
+    position:absolute; bottom:30px;
+    left:50%; transform:translate(-50%);
+}
+.article1 .slide-group .slick-dots li {
+    display:inline-block; margin:0 7px;
+}
+.article1 .slide-group .slick-dots li button {
+    width:15px; height:15px;
+    border-radius:50%;
+    background:none; border:1px solid rgba(255,255,255,0.7);
+    color:transparent;
+}
+.article1 .slide-group .slick-dots li.slick-active button {
+    background:rgba(255,255,255,0.7); border:none;
+}
+
 .article1 .slide1 {
     background:url(../img/main_img1.jpg) no-repeat center;
     background-size:cover;
@@ -54,14 +88,12 @@ body {color:#666;
     background-size:cover;
     height:650px;
     position:relative;
-    display:none;
 }
 .article1 .slide3 {
     background:url(../img/main_img3.jpg) no-repeat center;
     background-size:cover;
     height:650px;
     position:relative;
-    display:none;
 }
 .article1 .slidetext {
     position:absolute;
@@ -72,35 +104,44 @@ body {color:#666;
 }
 .article1 .slidetext h2 {
     font-size:42px;
-    font-weight:bold;
+    font-weight:800;
+}
+.article1 .slide.slick-active .slidetext h2 {
+    animation:fadeInDown 0.5s both 0.6s;
 }
 .article1 .slidetext p {
     font-size:16px;
     margin:30px 40px;
     line-height:1.5;
+    font-weight: 400;
+}
+.article1 .slide.slick-active .slidetext p {
+    animation:fadeInUp 0.7s both 0.7s;
 }
 .article1 .slidetext a {
     font-size:15px;
     padding:8px 35px;
-    display:block;
-    width:130px;
+    display:inline-block;
     margin:0 auto;
     border:1px solid #fff;
+    font-weight: 400;
+}
+.article1 .slide.slick-active .slidetext a {
+    animation:fadeInUp 0.9s both 0.8s;
 }
 .article1 .slidetext a:hover {
     background:rgba(255,255,255,0.3);
 }
 
-.article2 {padding-top:80px; padding-bottom:80px;}
-.article2 .title {
-    text-align:center;
-    margin-bottom:50px;
-}
-.article2 .title h2 {
+.article2 h2 {
     font-size:36px;
     font-weight:bold;
     color:#000;
-    padding-bottom:20px;
+    text-align:center;
+    padding:80px 0 20px;
+}
+.article2 > p, .article4 > p {
+    padding-bottom: 40px; text-align: center;
 }
 .article2 .content > div {
     height:520px;
@@ -108,7 +149,13 @@ body {color:#666;
     float:left;
     margin-right:1.3333%;
     position:relative;
+    overflow: hidden;
 }
+.article2 .content > div::before {
+    content:''; position:absolute; top:0; left:0; bottom:0; right:0;
+    background:rgba(0,0,0,0.5); opacity:0; transition:all 0.3s;
+}
+.article2 .content > div:hover::before {opacity:1;}
 .article2 .content .img1 {
     background:url(../img/what1.jpg);
     background-size:cover;  
@@ -130,9 +177,14 @@ body {color:#666;
     position: absolute;
     bottom:25px; left:25px; right:25px;
     color:#fff;
+    opacity:0; transform: translateY(100%);
+    transition: all 0.5s;
 }
+.article2 .content > div:hover .imgtext {
+    opacity: 1; transform: translate(0);}
 .article2 .content .imgtext h3 {
     font-size:24px;
+    font-weight: 500;
 }
 .article2 .content .imgtext p {
     font-size:14px;
@@ -141,43 +193,45 @@ body {color:#666;
 }
 .article2 .content .imgtext a {
     font-size:11px;
-    border:1px solid #fff;
+    border:1px solid rgba(255,255,255,0.5);
     padding:8px 40px;
     display:inline-block;
+    font-weight: 600 !important;
 }
 .article2 .content .imgtext a:hover {
-    background:rgba(255,255,255,0.2)
+    background:rgba(255,255,255,0.3)
 }
 
-.article3 .slide {
+.article3 {
     background:url(../img/intro_bg.jpg) no-repeat center top;
     background-size:cover;
-    background-attachment:fixed;
+    background-attachment:fixed; /* 패럴렉스 이미지 : 스크롤시 배경이미지 고정스타일 */
     height:304px;
+    margin-top:100px;
+    color:#fff; text-align:center;
     position:relative;
 }
-.article3 .text {
-    color:#fff;
-    text-align:center;
+.article3 > div {
     position:absolute;
     top:50%; left:50%;
     transform:translate(-50%,-50%);
 }
-.article3 .text p:nth-child(1) {
+.article3 h2 {
     font-size:34px;
     font-weight:bold;
 }
-.article3 .text p:nth-child(2) {
+.article3 p {
     font-size:14px;
     margin:30px 0 40px;
 }
-.article3 .text p:nth-child(3) a {
+.article3 a {
     font-size:13px;
-    padding:8px 30px;
-    border:1px solid #fff;
+    padding:8px 30px; display:inline-block;
+    border:1px solid rgba(255,255,255,0.3);
+    transition:all 0.3s; /*속성값이 숫자값인 것에만 먹힘*/
 } 
-.article3 .text p:nth-child(3) a:hover {
-    background:rgba(255,255,255,0.2)
+.article3 a:hover {
+    background:rgba(255,255,255,0.3);
 }  
 
 .article4 {text-align:center; background:#eee; padding:80px 0 40px;}
@@ -192,13 +246,108 @@ body {color:#666;
     margin-bottom:20px;
 }
 .article4 li:nth-child(3n) {margin-right: 0;}
+/* margin값이 상하로 만나면 겹쳐지므로 둘 중에 큰 값 하나만 적용 됨
+   padding은 상하로 만나면 겹치지 않고 더해짐 */
 .article4 .textbox p:nth-child(1) {
     font-size:17px; margin:20px; font-weight:bold;
 }
 .article4 .textbox p:nth-child(2) {
     font-size:14px; margin:20px; line-height:1.5;}
-.article4 li img {transition:all 0.3s; opacity:1;}
-.article4 li img:hover {opacity:0.6;}
+.article4 .imgbox {overflow: hidden; position:relative;}
+.article4 .imgbox img {transition:all 0.4s;}
+/* 호버시 ::before나 ::after 박스가 중간에 생기면 
+마우스가 이미지를 가리킬 수 없으므로, 부모한테 호버했을때
+이미지 스케일이 커지도록 함 */
+.article4 .imgbox:hover img {transform:scale(1.1);}
+
+.article4 .imgbox::before{
+    content:''; position:absolute; top:0; left:0; bottom:0; right:0;
+    background:rgba(0,0,0,0.5); opacity:0; transition:all 0.3s;}
+.article4 .imgbox:hover::before{opacity:1; z-index:99;}
+
+.article4 li .zoom {
+    position:absolute; top:50%; left:50%;
+    transform:translate(-50%,-50%) scale(2);
+    color:#fff; opacity:0; transition:all 0.3s;} 
+.article4 li .imgbox:hover .zoom {opacity:1; z-index:999;}
+
+.article4 .more a {display:block; width:34px; height:34px;
+    margin:15px auto 0; border:2px solid #adadad;
+    border-radius:50%; box-sizing:unset;
+    position:relative;
+    transition:all 0.3s;
+}
+.article4 .more a:hover {transform:rotate(90deg);}
+.article4 .more a::before {
+    content:'';
+    width:2px; height:34px; background:#adadad;
+    position: absolute; top:0; left:50%; margin-left:-1px;
+}
+.article4 .more a::after {
+    content:'';
+    width:34px; height:2px; background:#adadad;
+    position: absolute; top:50%; left:0%; margin-top:-1px;
+}
+
+.article5 { padding:30px 0;}
+.article5 .row { overflow:hidden }
+.article5 .row > div { width:33.33%; float:left; }
+.article5 .row > .cs_board { padding-right:30px; }
+.cs_board .tabmenu {overflow:hidden; border-bottom:1px solid #ddd;}
+.cs_board .tabmenu li {float:left;
+    border:1px solid #ddd; border-bottom:none;
+    padding:10px 20px; cursor: pointer;
+}
+.cs_board .tabmenu li.active {background:#ddd; color:#000;}
+.cs_board .contents > div {display:none;}
+.cs_board .contents > div.active {display:block;}
+.cs_board .contents table {font-size:14px;}
+.cs_board .contents col:nth-child(1) {width:auto;}
+.cs_board .contents col:nth-child(2) {width:100px;}
+.cs_board .contents td {border-bottom:1px solid #ddd;
+    padding:9px 5px;}
+.cs_board .contents td:nth-child(1) {
+    white-space:nowrap; overflow:hidden;
+    text-overflow:ellipsis;}
+.cs_board .contents td:nth-child(2) {text-align:right;}
+
+.cs_board .contents {position:relative;}
+.cs_board .contents .more {
+    position:absolute; bottom:100%; right:0;
+    padding:5px; background:#ddd; margin-bottom:5px;
+    border-radius:3px;
+}
+
+.article5 .row > div.cs_center { 
+    border-left:1px solid #ddd;
+    border-right:1px solid #ddd;
+    padding:0 30px;
+}
+.article5 .row > div.cs_center h4 {color:#000; font-size:20px; line-height:28px; padding-bottom:15px; font-weight:500;}
+.article5 .cs_center li {font-size:13px; line-height:20px; padding-left:10px; margin:2px 0; text-indent:0px; position:relative;}
+.article5 .cs_center li::before {content:""; width:3px; height:3px; background:#666; border-radius:50%; position:absolute; left:0; top:50%; transform:translateY(-50%)}
+.article5 .cs_center li a {text-indent:0px;}
+.article5 .cs_center li.tel_num {color:#ed5c20; font-size:30px; line-height:36px; font-weight:700; font-family:'Montserrat',sans-serif; padding-bottom:10px; padding-left:0;} 
+.article5 .cs_center li.cs-btn::before,
+.article5 .cs_center li.tel_num::before
+{display:none;}
+.article5 .cs_center li.cs-btn {padding-top:20px !important; padding:0; text-indent:0; margin:0; font-size:0; text-align:center;}
+.article5 .cs_center li.cs-btn a {
+    display: inline-block; width: 46%; margin: 1%; border-radius: 3px;
+    padding: 10px; font-size: 14px; text-align: center;color: #FFF;}
+.article5 .cs_center li.cs-btn a.cs-btn {background: #787878;}
+.article5 .cs_center li.cs-btn a.cs-btn2 {background: #001f60;}
+.article5 .cs_center li.tel_num i {transform:rotateY(180deg) scale(0.8);}
+
+.article5 .row div.cs_movie { padding-left:30px; }
+/* 유부브 동영상 스타일 공식 */
+.article5 .cs_movie .tubewrap {
+    width:100%; padding-top:56.25%;
+    position:relative;
+}
+.article5 .cs_movie .tubewrap iframe {
+    position:absolute; top:0; left:0;
+}
 
 /* fooder */
 #footer {background:#333; color:#ddd; padding:30px 0;
@@ -209,9 +358,13 @@ body {color:#666;
     margin:0 5px; transition:all 0.3s;
 }
 #footer .icon a:hover {background: rgba(255,255,255,0.3);}
+#footer .icon a i {transition:all 0.3s;}
+#footer .icon a:hover i {transform:scale(1.2);}
+
 #footer .info {margin:20px; font-size:12px; line-height:1.5;}
 #footer .info li {display:inline-block; padding:0 10px;}
-#footer .btn a {font-size:11px; padding:3px 10px; 
+
+#footer .btn a {font-size:11px; padding:3px 10px; display:inline-block;
     border:1px solid rgba(255,255,255,0.5); margin:0 1px;
     color:#bbb; transition:all 0.4s;}
 #footer .btn a:hover {background: #999;
