--- a/css/index.css
+++ b/css/index.css
@@ -27,31 +27,39 @@ body {color:#666;
  2.둘 중에 높이가 낮은 자식을 position:absolute정렬 : 부모한테 position:relative */
 #header > .row {position: relative;}
 #header h1 { /* float:left: ; */ padding:20px 0px;}
-#header #nav {/* float:right: ; */ z-index:999999;
+#header .open,
+#header .close {display:none;}
+#header .nav {/* float:right: ; */ z-index:999999;
     position: absolute; top:50%; right: 0;
     transform: translateY(-50%);
     font-size:18px; color:#1e1e1e;}
-#header #nav .depth1 > li {float:left; position:relative; font-weight: bold;}
-#header #nav .depth1 > li > a { padding:20px 30px; display:inline-block; }
-#header #nav .depth1 > li:hover > a {color:#00529b;}
-#header #nav .depth2 {background:#555; color:#fff; font-size:14px;
+#header .nav .depth1 > li {float:left; position:relative; font-weight: bold;}
+#header .nav .depth1 > li > a { padding:20px 30px; display:inline-block; }
+#header .nav .depth1 > li.on > a {color:#00529b;}
+#header .nav .depth2 {background:#555; color:#fff; font-size:14px;
     position:absolute; top:100%; left:0%; text-align:center;
     z-index:999999; width:100%;
     display:none; 
     /* opacity: 0; */
     transition:all 0.3s; /* display 속성은 적용 안됨 */
 }
-#header #nav .depth1 > li:hover .depth2 {
+#header .nav .depth1 > li.on .depth2 {
     display:block;
     /* opacity: 1; */
 }
-#header #nav .depth2 > li > a {display:block; padding:15px 0; border-bottom:1px solid #666}
+#header .nav .depth2 > li > a {display:block; padding:15px 0; border-bottom:1px solid #666}
 /* a 태그에 padding값 줄때는 display:inline-block도 항상 같이 */
 #header .depth2 > li:last-child > a {border-bottom: none;}
-#header #nav .depth2 > li:hover > a {background:#00529b; color:#dfe9fe;}
+#header .nav .depth2 > li:hover > a {background:#00529b; color:#dfe9fe;}
 
 /* section */
+.article1 {position:relative;}
 .article1 .slide-group {position:relative;}
+.article1 .plpa {
+    position:absolute; bottom:23px; left:50%;
+    transform:translate(205px); color:#fff;
+    border:none; background:none; font-size:20px;
+}
 .article1 .slide-group .slick-arrow {
     position:absolute;
     top:50%; transform:translateY(-50%);
@@ -68,10 +76,9 @@ body {color:#666;
     display:inline-block; margin:0 7px;
 }
 .article1 .slide-group .slick-dots li button {
-    width:15px; height:15px;
-    border-radius:50%;
+    width:120px; height:7px;
     background:none; border:1px solid rgba(255,255,255,0.7);
-    color:transparent;
+    color:transparent; vertical-align: middle;
 }
 .article1 .slide-group .slick-dots li.slick-active button {
     background:rgba(255,255,255,0.7); border:none;
@@ -102,12 +109,13 @@ body {color:#666;
     text-align:center;
     color:#fff;
 }
+.article1 .slide.slick-cloned .slidetext {opacity:0;}
 .article1 .slidetext h2 {
     font-size:42px;
     font-weight:800;
 }
 .article1 .slide.slick-active .slidetext h2 {
-    animation:fadeInDown 0.5s both 0.6s;
+    animation:fadeInDown 0.5s both 0.3s;
 }
 .article1 .slidetext p {
     font-size:16px;
@@ -116,7 +124,7 @@ body {color:#666;
     font-weight: 400;
 }
 .article1 .slide.slick-active .slidetext p {
-    animation:fadeInUp 0.7s both 0.7s;
+    animation:fadeInUp 0.7s both 0.4s;
 }
 .article1 .slidetext a {
     font-size:15px;
@@ -127,7 +135,7 @@ body {color:#666;
     font-weight: 400;
 }
 .article1 .slide.slick-active .slidetext a {
-    animation:fadeInUp 0.9s both 0.8s;
+    animation:fadeInUp 0.9s both 0.5s;
 }
 .article1 .slidetext a:hover {
     background:rgba(255,255,255,0.3);
@@ -298,7 +306,7 @@ body {color:#666;
     border:1px solid #ddd; border-bottom:none;
     padding:10px 20px; cursor: pointer;
 }
-.cs_board .tabmenu li.active {background:#ddd; color:#000;}
+.cs_board .tabmenu li.active {background:#ddd; color:orangered;}
 .cs_board .contents > div {display:none;}
 .cs_board .contents > div.active {display:block;}
 .cs_board .contents table {font-size:14px;}
